MMA-7129 Endret til å mappe/lagre postadresse fra qdist008
* Selv om distribusjonskanal ikke er PRINT